<resources>
    <string name="app_name">AnandCV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anand M Joseph</string>
    <string name="nav_header_title_mob">Mob:0210341567</string>
    <string name="nav_header_subtitle">anandmampuzhakal@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_me_txt_one"> A technology enthusiast with over 10+ years of hands-on experience in
developing software for mobile,web and desktop. Expert in creating the
scalable and maintainable architecture for mobile apps by combining
frameworks and tools build from scratch or using commercial/
noncommittal solutions developed by other vendors.Exposed to server
side technologies and proficient in data structures and conformable in
using them to visualise the data using mobile UI frameworks. Had been
part of game development during the initial period of my career.
Experienced in managing the team and mentoring them.</string>
    <string name="about_me_txt_two">The last company I was working with (till 22 Sept 2017) is Neva Innovation
Labs Pvt.Ltd, Bangalore, India. Our head office is at Silicon Valley US. I was
heading the android developments for this company. Our most recent
product is in health domain. It is a combination of Nano technology,
Android, ML(Machine Learning) and AI (Artificial Intelligence).</string>
    <string name="about_me_txt_three">My core experience is in android application development, I am
good in android framework, Android SDK, Tensorflow, Java and Kotlin. I
have 10+ years of extensive software development experience, in which
last 8+years is in Android and 8 months in IoS development. Among my
45+ Android applications, some of them were in top ten in android market
during certain periods 1.6 years was with Samsung in South Korea with
their android team for Samsung Galaxy S, Galaxy S2, CHIFF, Sprint S,
and Honeycomb Tablet. I have also android experience on specific
embedded devices from NComputing, application for Cisco setup box,
Payback.</string>
    <string name="about_me_txt_four">I love to talk about technology and find my own time to keep upto
date with all the new things which is evolving in technology. I also help
people to develop their skills by closely woking along with them or through
opensource portals such as Stackoverflow, Github etc.
I am holding a valid NZ open work visa, living at Auckland at present and
available immediately.</string>

    <string name="pageone_fragment_text">Aboutmeone Fragment</string>
    <string name="pagetwo_fragment_text">Aboutmetwo Fragment</string>
    <string name="pagethree_fragment_text">Aboutmethree Fragment</string>
    <string name="pagefour_fragment_text">Aboutmefour Fragment</string>
    <string name="role_one">TECHNICAL ARCHITECT</string>
    <string name="role_two">MOBILE APP DEVELOPMENT</string>
    <string name="role_three">ANDROID APP DEVELOPMENT</string>
    <string name="role_four">ANDROID AUTO APP DEVELOPMENT</string>
    <string name="role_five">EMBEDDED APP DEVELOPMENT</string>
    <string name="role_six">REACT NATIVE APP DEVELOPMENT</string>
    <string name="role_sevan">PROJECT MANAGER</string>
    <string name="com_name_neva">Neva Innovation Labs</string>
    <string name="com_name_ec">e-Centric Consultancy Service Pvt. Ltd</string>
        <string name="com_name_so">Sourcebits Technologies</string>
    <string name="com_name_Lnt">L&amp;T Infotech</string>
    <string name="com_name_ay">Aymex Services Pvt.Ltd</string>
    <string name="com_name_ns">Ness Technologies</string>

    <string name="nv_des">Technical Architect</string>
    <string name="nv_per">2014 August to 2017 September</string>
    <string name="nv_role">Application Development | Android/WEB/API | Data Visualization | Architecture Product User Interface Road Map | Team Building | Mentoring Code Reviews|Project delivery | Project Architect</string>

    <string name="ec_des">Technical Architect</string>
    <string name="ec_per">2013 December to 2014 August</string>
    <string name="ec_role">Application Development | Data Visualization | Architecture Product User Interface Road Map | Team Building | Mentoring Code Reviews|Project delivery | Project Architect</string>

    <string name="ns_des">Member Technical Staff </string>
    <string name="ns_per">2012 July To 2013 December</string>
    <string name="ns_role">Application Development | Data Visualization| Mentoring | Code Reviews</string>

    <string name="so_des">Team Lead (Android)</string>
    <string name="so_per">September 2011 to July 2012</string>
    <string name="so_role">Application Development | Data Visualization| Mentoring | Code Reviews</string>

    <string name="ln_des">Software Engineer (Android)</string>
    <string name="ln_per">2009 September - 2011 August</string>
    <string name="ln_role">Application Development | Data Visualization| Unit testing</string>

    <string name="so_des_on">Software Engineer (Android)</string>
    <string name="so_per_on">2008 December to 2009 September</string>
    <string name="so_role_on">Application Development | Code Reviews</string>

    <string name="ay_des">Software Engineer (J2EE/Jboss/Spring)</string>
    <string name="ay_per">2007 December-2008 November</string>
    <string name="ay_role">Application Development</string>

</resources>
