<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

 <RelativeLayout
     android:id="@+id/imglay"
     android:layout_marginLeft="@dimen/dimen_10"
     android:layout_marginTop="@dimen/dimen_15"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="@dimen/dimen_80"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/anand" />
 </RelativeLayout>
    <RelativeLayout
        android:id="@+id/perinlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_below="@+id/imglay"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginLeft="@dimen/dimen_8"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:gravity="right"
        android:text="@string/nav_header_title_mob"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_below="@+id/perinlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:text="@string/nav_header_subtitle" />

</RelativeLayout>
